# blobify

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  conanfile.txt
cmake/: FindPFR.cmake  Findmagic_enum.cmake
docs/: .gitignore
examples/: CMakeLists.txt  bmp.cpp  test.cpp
include/: blobify.hpp
include/blobify/: blobify.hpp  construction_policy.hpp  endian.hpp  exceptions.hpp  load.hpp  memory_storage.hpp  modify.hpp  properties.hpp  storage_backend.hpp  store.hpp  stream_storage.hpp  tag.hpp
include/blobify/detail/: is_array.hpp  pmd_traits.hpp
src/: blobify.cpp
tests/: CMakeLists.txt  simple_test.cpp
